# kde-plasma-emoji-picker

./: CMakeLists.txt  Main.qml  README.md  build.sh  main.cpp  qml.qrc
